<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/filter_rest"
        android:visibility="visible"
        android:paddingTop="5dp"
        android:weightSum="1">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterKostenlos"
            android:id="@+id/fKostenlos"
            android:layout_above="@+id/progressBar"
            android:layout_toLeftOf="@+id/progressBar"
            android:layout_toStartOf="@+id/progressBar" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterBarrierefrei"
            android:id="@+id/fBarrierefrei"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fBarrierefrei_hint"
            android:layout_marginBottom="5sp"
            android:layout_marginLeft="10sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterKostenlosParken"
            android:id="@+id/fKostenlosparken" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterBestaetigt"
            android:id="@+id/fBestaetigt" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterOhneStoerung"
            android:id="@+id/fStoerung" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterHotels"
            android:id="@+id/fHotels"
            android:visibility="gone" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterRestaurants"
            android:id="@+id/fRestaurants"
            android:visibility="gone" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/f_opening"
            android:spinnerMode="dialog"
            android:theme="@style/MyLightTheme"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.03"
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10sp"
            android:paddingRight="30sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fPower_label"
                android:text="@string/fpowerlabel"
                android:layout_weight="1"
                android:textColor="@color/primary_text_default_material_light" />

            <TextView
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fPowerDisplay"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/primary_text_default_material_light"
                android:textSize="@dimen/abc_text_size_medium_material" />
        </LinearLayout>

        <SeekBar
            style="@android:style/Widget.Material.Light.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="4"
            android:progress="2"
            android:id="@+id/fPowerBar"
            android:layout_marginRight="50sp"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="10sp" />
    </LinearLayout>

</LinearLayout>