<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/info"
    android:id="@+id/eulaScreen"
    android:elevation="9dp"
    android:visibility="gone"
    tools:showIn="@layout/mainlayout">


    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:id="@+id/eulaTitel"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/icon"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textColor="@color/colorPrimaryDark"
        android:typeface="sans"
        android:gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/eulaTitel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scrollbarStyle="insideOverlay"
        android:id="@+id/eulaScroll"
        android:layout_above="@+id/eulaButton"
        android:layout_margin="5sp">
        <TextView
            android:text="@string/dialog_text1"
            android:layout_width="match_parent"
            android:id="@+id/eulaText"



            android:textSize="14sp"
            android:textAlignment="center"
            android:textIsSelectable="false"
            android:textColor="@color/colorPrimaryDark"
            android:typeface="sans"
            android:gravity="top"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:inputType="textMultiLine"
            android:layout_margin="6sp" />



    </ScrollView>

    <CheckBox
        android:text="@string/skipMessage"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:id="@+id/skipEula"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15sp"
        android:layout_toLeftOf="@+id/eulaButton" />

    <Button
        android:text="@string/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eulaButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="?attr/colorButtonNormal"
        android:layout_marginBottom="10sp"
        android:layout_marginRight="10sp" />

</RelativeLayout>
